<resources>
    <string name="app_name">Nencer Wallet</string>
    <string name="activity_sign_up_title_password_edit_text_hint">●●●●●●●●</string>
    <string name="main_settings_login_button_text">Đăng nhập</string>
    <string name="activity_sign_in_title_id">Tên đăng nhập</string>
    <string name="activity_sign_in_title_password">Mật khẩu</string>
    <string name="activity_sign_in_find_password_description"><u>Quên mật khẩu của bạn?</u></string>
    <string name="activity_sign_in_not_yet_user_description">Chưa là thành viên?</string>
    <string name="activity_sign_in_sign_in_description">Đăng ký</string>
    <string name="username_not_null">User name cannot be empty</string>
    <string name="password_not_null">Password name cannot be empty</string>
    <string name="activity_sign_up_title_toolbar">Đăng ký</string>
    <string name="text_full_name_title">Họ tên</string>
    <string name="text_email_or_phone_number">Email hoặc số điện thoại</string>
    <string name="text_verification_code">Mã xác thực</string>
    <string name="dialog_exceed_recommend_warning_title">Cảnh báo trường nhập của bạn có vấn đề</string>
    <string name="dialog_warning_description">Vượt quá lượng khuyến cáo. \ Caffein quá mức \ n khiến huyết áp tăng \ n Nếu kéo dài \ n gây ra xơ cứng động mạch!</string>
    <string name="text_logo_ic">Logo icon</string>
    <string name="text_back_button">Back button</string>
    <string name="txt_forgot_password">Khôi phục mật khẩu</string>
    <string name="txt_email_address">Địa chỉ Email</string>
    <string name="txt_change_password">Đổi mật khẩu</string>
    <string name="txt_password_currency">Mật khẩu hiện tại:</string>
    <string name="txt_old_password">Mật khẩu cũ</string>
    <string name="txt_new_password">Mật khẩu mới:</string>
    <string name="txt_verify_password">Xác nhận mật khẩu:</string>
    <string name="txt_verify">Xác nhận</string>
    <string name="msg_verify">Mời bạn nhập OTP</string>
    <string name="txt_verify_msg">Mã xác thực</string>
    <string name="txt_pay">Thanh toán</string>
    <string name="txt_my_order">Giỏ hàng</string>
    <string name="txt_notify_order">Giỏ hàng rỗng</string>
    <string name="activity_order_detail_title_toolbar">Chi tiết đơn hàng</string>
    <string name="txt_copy">Copy</string>
    <string name="txt_next_buy">Tiếp tục mua hàng</string>
    <string name="txt_copy_all">Copy tất cả</string>
    <string name="text_status">Trạng thái: </string>
    <string name="txt_phone">Số điện thoại</string>
    <string name="activity_user_info">Thông tin tài khoản</string>
    <string name="text_user_name">Tên đăng nhập</string>
    <string name="text_name">Họ và tên</string>
    <string name="text_email_title">Email:</string>
    <string name="text_phone_title">Số điện thoại:</string>
    <string name="text_group_title">Nhóm:</string>
    <string name="text_tv_xac_thuc_sdt_title">Xác thực số điện thoại:</string>
    <string name="text_tv_xac_thuc_email_title">Xác thực email:</string>
    <string name="text_tv_xac_thuc_giay_to_title">Xác thực trên giấy tờ:</string>
    <string name="text_date_register_title">Ngày đăng kí:</string>
    <string name="text_wallet_title">Ví điện tử:</string>
    <string name="txt_edit">Sửa thông tin</string>
    <string name="txt_name">Họ và tên</string>
    <string name="txt_gioi_tinh">Giới tính</string>
    <string name="txt_mk_cap_2">Mật khẩu cấp 2</string>
    <string name="activity_history_detail_title_toolbar">Thông tin về sản phẩm thẻ</string>
    <string name="txt_new_password_title">Mật khẩu mới:</string>
    <string name="txt_re_password">Xác nhận mật khẩu</string>
    <string name="txt_re_password_title">Xác nhận mật khẩu:</string>
    <string name="text_name_tile">Họ và tên:</string>
    <string name="text_user_name_title">Tên đăng nhập:</string>
    <string name="activity_tranfer">Chuyển số dư</string>
    <string name="txt_tranfer">Chuyển tiền</string>
    <string name="txt_to_user_name">Tên người nhận</string>
    <string name="text_amount">Số tiền</string>
    <string name="text_msg">Nội dung</string>
    <string name="txt_to_acc_name">Tài khoản nhận</string>
    <string name="message">ネットワークを設定する？</string>
    <string name="yes">決定</string>
    <string name="title">プロンプト</string>
    <string name="no">キャンセル</string>
    <string name="content">しばらくお待ちください</string>
    <string name="pzb_title">番組表</string>
    <string name="vod_title">クラウト録画</string>
    <string name="uread">新規メール</string>
    <string name="alread">既読メール</string>
    <string name="total">メール総計</string>
    <string name="cur_time">再生時間</string>
    <string name="total_time">收錄時間</string>
    <string name="utils">\10KB/S</string>
    <string name="ts_success">ダウンロードの予約ができました。</string>
    <string name="ts_fail">ダウンロードの予約ができませんでした。\10再度予約してください。</string>
    <string name="ts_max">予約可能な番組数の上限になっています。\10しばらくしてから再度予約してください。</string>
    <string name="ts_no_usb">ＵＳＢを差し込んでください。</string>
    <string name="ts_no_space">メモリが足りません。</string>
    <string name="ts_pro_begin">この番組は現在「</string>
    <string name="ts_pro_end">％」ダウンロードされています 。</string>
    <string name="live_fail">ただいま、受信できません。しばらく時間をおいてから再度お試しください</string>
    <string name="vod_fail">クラウト録画は失敗しましたので、この番組は再生できません</string>
    <string name="usb_lack_sapce">USBの容量が不足しているためダウンロードできません</string>
    <string name="prompt_exit">确定退出吗?</string>
    <string name="hint_input">请输入关键字</string>
    <string name="filter">筛选</string>
    <string name="category">类型</string>
    <string name="area">地区</string>
    <string name="time">时间</string>
    <string name="intro">剧情简介</string>
    <string name="detailList">详细列表</string>
    <string name="diversityPlay">分集播放</string>
    <string name="all">全部</string>
    <string name="play">播放</string>
    <string name="director">导演：</string>
    <string name="actors">主演：</string>
    <string name="origin">地区：</string>
    <string name="score">评分：</string>
    <string name="provider">来源：</string>
    <string name="early">更早</string>
    <string name="by_time">时间</string>
    <string name="by_score">评分</string>
    <string name="by_hot">人气</string>
    <string name="produceYear">年份：</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="myPic">图片</string>
    <string name="myMusic">音乐</string>
    <string name="myVideo">视频</string>
    <string name="modify">修改</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="qr">扫描二维码</string>
    <string name="refresh">刷新</string>
    <string name="userLogin">用户登录</string>
    <string name="userRegister">用户注册</string>
    <string name="userName">用户名：</string>
    <string name="userPwd">密 码：</string>
    <string name="userOldPwd">旧密 码：</string>
    <string name="userNewPwd">新密码：</string>
    <string name="userPwd2">确认密码：</string>
    <string name="email">邮箱：</string>
    <string name="question">密保问题：</string>
    <string name="answer">答案：</string>
    <string name="autoLogin">自动登录</string>
    <string name="rememberPwd">记住密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="logout">注销</string>
    <string name="changePwd">修改密码</string>
    <string name="forgotPwd">找回密码</string>
    <string name="video_diversity">选集</string>
    <string name="playback">回看</string>
    <string name="time_0">00:00:00</string>
    <string name="list_title">DMR列表</string>
    <string name="remote_remote">智能遥控器</string>
    <string name="remote_mouse">鼠标遥控器</string>
    <string name="remote_voice">语音遥控器</string>
    <string name="play_failed">播放失败，将退出...</string>
    <string name="ad_end">广告结束还有</string>
    <string name="google_voice_info">发现未安装Google Voice，需要安装该应用才能继续使用语音遥控器，是否现在安装？</string>
    <string name="google_voice">http://apk.directepg.info/tv/remote/googlevoice.zip</string>
    <string name="label_start_recognize">点击开始</string>
    <string name="network_error_before">当前网络无法连接到</string>
    <string name="network_error_end">，请重新设置网络或稍后再试！</string>
    <string name="local_resource">本地资源</string>
    <string name="continue_before">您上次播放到</string>
    <string name="continue_after">，是否继续播放？</string>
    <string name="settings">设置</string>
    <string name="password_old_null">旧密码不能为空！</string>
    <string name="password_new_null">新密码不能为空！</string>
    <string name="user_null">用户名不能为空！</string>
    <string name="password_null">密码不能为空！</string>
    <string name="password2_null">确认密码不能为空！</string>
    <string name="password_not_equal">两次密码不一致！</string>
    <string name="password_length_error">密码长度为6–16个字符！</string>
    <string name="email_null">邮箱不能为空！</string>
    <string name="email_invalid">邮箱地址无效！</string>
    <string name="answer_null">答案不能为空！</string>
    <string name="registering">正在注册，请稍后…</string>
    <string name="changeing_password">正在修改密码，请稍后…</string>
    <string name="question1">您的学号是什么？</string>
    <string name="question2">您的班主任叫什么？</string>
    <string name="question3">您的宠物叫什么？</string>
    <string name="question4">您的爱人叫什么？</string>
    <string name="input_user">请输入用户名</string>
    <string name="getting_info">正在获取信息，请稍后…</string>
    <string name="logining">正在登录，请稍后…</string>
    <string name="user_password_error">用户名或密码不正确！</string>
    <string name="user_exists">用户已存在！</string>
    <string name="user_not_exists">用户不存在！</string>
    <string name="change_password_success">修改密码成功，请重新登录！</string>
    <string name="change_password_failed">修改密码失败！</string>
    <string name="answer_error">密保问题回答错误！</string>
    <string name="server_exception">服务器异常！</string>
    <string name="get_no_data">没有获取到数据！</string>
    <string name="loginouting">正在注销，请稍后…</string>
    <string name="loginout_failed">注销失败</string>
    <string name="prompt">提示</string>
    <string name="nmp_poll_msg">网管消息</string>
    <string name="realname">真实姓名：</string>
    <string name="phone">手机号码：</string>
    <string name="address">地址：</string>
    <string name="realname_null">真实姓名不能为空！</string>
    <string name="phone_null">手机不能为空！</string>
    <string name="address_null">地址不能为空！</string>
    <string name="phone_invalid">手机号码无效！</string>
    <string name="user_id_invalid">用户名无效！</string>
    <string name="address_invalid">地址无效！</string>
    <string name="count_ordered">已订购</string>
    <string name="count_detail">账户详情</string>
    <string name="count_remain">账户余额</string>
    <string name="count_to_recharge">充值</string>
    <string name="count_recharge_hint">充值金额</string>
    <string name="money_input_error">输入有误.充值金额只能包含数字,不能有其他字符</string>
    <string name="money_input_null">充值金额不能为空</string>
    <string name="count_subscribe">订购</string>
    <string name="will_subscribe">订购</string>
    <string name="will_not_subscribe">不订购</string>
    <string name="authen_success">鉴权成功</string>
    <string name="authen_fail">鉴权失败</string>
    <string name="authen_400">鉴权失败,非法请求</string>
    <string name="authen_401">鉴权失败,非法用户</string>
    <string name="authen_402">鉴权失败,用户被禁用</string>
    <string name="authen_403">鉴权失败,无效Token</string>
    <string name="authen_404">鉴权失败,无效的meidia_id</string>
    <string name="authen_405">鉴权失败,service未包含media</string>
    <string name="authen_406">鉴权失败,对不起,您没有订购该资源</string>
    <string name="authen_407">鉴权失败,业务包已过期</string>
    <string name="authen_408">鉴权失败,不支持该协议</string>
    <string name="authen_409">鉴权失败,无效终端</string>
    <string name="authen_410">鉴权失败,终端已禁用</string>
    <string name="authen_408_direct">鉴权失败,非法的url</string>
    <string name="subscribe_success">恭喜您,订购成功!</string>
    <string name="subscribe_fail">不好意思,订购失败</string>
    <string name="subscribe_never">对不起,您没有订购该资源</string>
    <string name="subscribe_400">非法请求</string>
    <string name="subscribe_401">非法用户</string>
    <string name="help">ご不明な点は、電話または、Ｅメールをお送りください。info@bbmax.netまでご連絡ください。48時間以内に返信いたします。</string>
    <string name="service_user">加入者:</string>
    <string name="service_sid">パッケージ:</string>
    <string name="service_validto">有効期限：</string>
</resources>