<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        android:background="@drawable/bg_common_alert_dialog">

    <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/_20sdp"
            android:textStyle="bold"
            android:textColor="@color/color_text_grayish_brown"
            android:textSize="@dimen/_14sdp"
            tools:text="Đổi mật khẩu" />
    <LinearLayout
            android:id="@+id/ll_form"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical"
            android:paddingTop="@dimen/_8sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp">

        <TextView
                android:id="@+id/tv_current_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                android:text="@string/txt_password_currency" />

        <EditText
                android:id="@+id/edt_old_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:paddingStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:textAlignment="center"
                android:hint="@string/txt_old_password"
                android:singleLine="true"
                android:background="@drawable/bg_editext" />

        <TextView
                android:id="@+id/tv_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                android:text="@string/txt_new_password_title" />

        <EditText
                android:id="@+id/edt_new_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:paddingStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:hint="@string/txt_new_password"
                android:textSize="@dimen/_12sdp"
                android:textAlignment="center"
                android:singleLine="true"
                android:background="@drawable/bg_editext" />

        <TextView
                android:id="@+id/tv_re_password"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                android:text="@string/txt_re_password_title" />

        <EditText
                android:id="@+id/edt_re_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:paddingStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:hint="@string/txt_re_password"
                android:textAlignment="center"
                android:singleLine="true"
                android:background="@drawable/bg_editext" />

    </LinearLayout>

    <Button
            android:id="@+id/btn_action"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_32sdp"
            android:textColor="@color/white_1"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:background="@drawable/background_green"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_form"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            tools:text="Cập nhật thông tin" />
</androidx.constraintlayout.widget.ConstraintLayout>
