<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="viewModel"
                type="com.nencer.nencerwallet.service.user.model.UserRegisterModel" />
    </data>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/activity_sign_in_constraint_parent_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <include
                    android:id="@+id/nvga"
                    layout="@layout/content_navitation"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            <EditText
                    android:id="@+id/activity_sign_in_id_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:background="@drawable/bg_border_black"
                    android:elevation="@dimen/_6sdp"
                    android:gravity="center"
                    android:hint="@string/activity_sign_in_title_id"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@={viewModel.username}"
                    android:textColor="@color/color_text_jade_green"
                    
                    android:textSize="@dimen/_13sdp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nvga" />


            <EditText
                    android:id="@+id/edt_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:background="@drawable/bg_border_black"
                    android:elevation="6dp"
                    android:gravity="center"
                    android:hint="@string/text_full_name_title"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@={viewModel.name}"
                    android:textColor="@color/color_text_jade_green"
                    
                    android:textSize="@dimen/_13sdp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/activity_sign_in_id_edit_text" />


            <EditText
                    android:id="@+id/edt_email_or_phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:background="@drawable/bg_border_black"
                    android:elevation="@dimen/_6sdp"
                    android:gravity="center"
                    android:hint="@string/text_email_or_phone_number"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@={viewModel.phone_email}"
                    android:textColor="@color/color_text_jade_green"
                    
                    android:textSize="@dimen/_13sdp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edt_full_name" />


            <EditText
                    android:id="@+id/activity_sign_in_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:background="@drawable/bg_border_black"
                    android:elevation="@dimen/_6sdp"
                    android:gravity="center"
                    android:hint="@string/activity_sign_in_title_password"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:maxLength="13"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@={viewModel.password}"
                    android:textColor="@color/color_text_jade_green"
                    android:textSize="@dimen/_13sdp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edt_email_or_phone" />


            <Button
                    android:id="@+id/activity_register_button"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_36sdp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:background="@drawable/background_green"
                    android:text="@string/activity_sign_up_title_toolbar"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:textColor="@color/white_1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/activity_sign_in_password_edit_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>